- Use FTGL library to draw fonts in GL context
- Fix Qt strings localization
- New options: INSTALL_ALL_LANGS, USE_SYSTEM_FONT, NO_DOCS, USE_SYSTEM_RTMIDI,
  WITH_MAN, WITH_TIMIDITY, WITH_FLUIDSYNTH, USE_FTGL, NO_LANGS, NO_LICENSE, DATA_DIR
- Allow to switch between languages within a session
- Add Piano Keyboard widget
- Update documentation
- Fix problem loading midi files with text events
- New Windows installer
- Use hicolor icon theme
- Fix USE_FLUIDSYNTH flag
- Fix incorrect drawing on ARM systems
- Fix segfault on the next start of program after playing corrupted midi file
- Fix midi input/output devices detection and reading config file
- RtMidi: version 4.0.0
- Fix reading saved position of main window
- Fix music and translations installation
- Qmake is alternative for Cmake (Linux, Windows)
- Fix macOS building
- Fix file open dialog hang by disabling timer
- Add JACK support for tools/fluidsynth
- Fix BSD Unix building and working
- Saving skill's settings in config file
- Fixes for BSD Unix to use fluidsynth+JACK without ALSA
- Patch for behavior similar to computer touch-typing (gtypist): "Follow Through
  Errors" mode

v0.6.8: (11 May 2018)
- French and Galician translations
- Translate notes
- Armel patch
- Install in /usr/share/games
- RtMidi: version 1.0.15

v0.6.7: (05 September 2013)
- Reset should be fixed now (keylights)
- Patch for kotechnology added
- Fixed some problems on windows
- Fix for the time signature problem
- Fixed some compile warning messages

v0.6.5: (26 January 2011)
- Added rhythm tapping for beginners
- Added key lights for Yamaha EZ-200, Casio LK 220, LK-300 TV, LK-43 etc.

v0.6.4: (28 November 2009)
- Added note names for beginners (to be used with a piano key note labels)
- Added assignable left and right midi channels.
- Improved MIDI timing accuracy.
- Greatly reduced the memory footprint.
- Reduced the CPU load.
- Reduced the screen flicker (recommend setting the screen refresh rate to 60Hz